tests/fixtures/errors/invalid_group_empty_alt.puml
@startuml
participant A
alt empty
end
A -> A : done
@enduml
